# hedgework-ps20-streamer

./: .gitignore  README.md  pyproject.toml
config/: streamer.toml
scripts/: check-cam.sh  dual_hailo_preview.py  dual_hailo_preview.sh  install.sh  network-speed-test.sh  streamer.service  uninstall_dualstream.sh  update.sh
scripts/rpicam/: bird_infer.json  pollinator_infer.json
src/streamer/: __init__.py  __main__.py  cameras.py  config.py  mjpeg.py  modem.py  power.py  schedule.py  server.py
src/streamer/webui/: cam.html  cam.js  embed-cam.html  embed.html  index.html  style.css
src/streamer/wildlife/: __init__.py  db.py  detector.py  filters.py  manager.py  storage.py  sync.py  tiling.py  types.py
tests/: test_wildlife_detector.py  test_wildlife_tiling.py
tests/bench-detections-2026-07-15/: wildlife.db
training/: README.md  classes.txt  ps20_birds.txt  ps20_pollinators.txt  species_display_names.json
training/datasets/birds/: data.yaml
training/datasets/birds_v2/: data.yaml
training/datasets/pollinators/: data.yaml
training/models/: bird_v2.json
training/runs/bird_v2/: args.yaml  results.csv
training/runs/pollinator_v1-2/: results.csv
training/scripts/: export_model_labels.py  filter_yolo_dataset.py  list_nabirds_classes.py  prepare_nabirds.py
wordpress/: README.md  embed-cam.css  embed-cam.js  hedgework-cam-embed.php
wordpress/hedgework-wildlife/: hedgework-wildlife.php
wordpress/hedgework-wildlife/assets/: wildlife-watch.css  wildlife-watch.js
wordpress/hedgework-wildlife/includes/: post-type.php  rest-api.php
(+1452 files in other folders)
